# ergonomic-windows

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.claude/: settings.local.json
.cursor/agents/: README.md  code-reviewer.mdc  documentation-writer.mdc  performance-engineer.mdc  product-manager.md  qa-engineer.mdc  rust-developer.mdc  security-auditor.md  windows-api-expert.mdc
.cursor/rules/: coding-standards.mdc  performance-rules.mdc  project-overview.mdc  testing-guidelines.mdc  windows-api-patterns.mdc
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  security.yml
benches/: allocations.rs  string_bench.rs
docs/: angular.json  package-lock.json  package.json  pnpm-lock.yaml
docs/public/: robots.txt  sitemap.xml
docs/src/: index.html  styles.css
docs/src/app/: app.html  app.routes.ts  app.ts
docs/src/app/pages/api/console/: console.html  console.ts
docs/src/app/pages/api/controls/: controls.html  controls.ts
docs/src/app/pages/api/d2d/: d2d.html  d2d.ts
docs/src/app/pages/api/env/: env.html  env.ts
docs/src/app/pages/api/fs/: fs.html  fs.ts
docs/src/app/pages/api/handle/: handle.html  handle.ts
docs/src/app/pages/api/mem/: mem.html  mem.ts
docs/src/app/pages/api/module/: module.html  module.ts
docs/src/app/pages/api/pipe/: pipe.html  pipe.ts
docs/src/app/pages/api/process/: process.html  process.ts
docs/src/app/pages/api/registry/: registry.html  registry.ts
docs/src/app/pages/api/security/: security.html  security.ts
docs/src/app/pages/api/string/: string.html  string.ts
docs/src/app/pages/api/sysinfo/: sysinfo.html  sysinfo.ts
docs/src/app/pages/api/thread/: thread.html  thread.ts
docs/src/app/pages/api/time/: time.html  time.ts
docs/src/app/pages/api/webview/: webview.html  webview.ts
docs/src/app/pages/api/window/: window.html  window.ts
docs/src/app/pages/api/xaml/: xaml.html  xaml.ts
docs/src/app/pages/getting-started/: getting-started.html  getting-started.ts
docs/src/app/pages/guides/performance/: performance.html  performance.ts
docs/src/app/pages/guides/safety/: safety.html  safety.ts
docs/src/app/pages/home/: home.html  home.ts
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_from_wide.rs  fuzz_quote_arg.rs  fuzz_strings.rs  fuzz_wide_builder.rs  fuzz_wide_string.rs
src/: console.rs  controls.rs  d2d.rs  env.rs  error.rs  fs.rs  handle.rs  lib.rs  main.rs  mem.rs  module.rs  pipe.rs  process.rs  registry.rs  security.rs  string.rs  sysinfo.rs  thread.rs  time.rs  webview.rs  window.rs  xaml.rs
