[package]
name = "ergonomic-windows"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
description = "Ergonomic, safe Rust wrappers for Windows APIs - handles, processes, registry, file system, and UTF-16 strings with zero-cost abstractions"
license = "MIT OR Apache-2.0"
authors = ["Pegasus Heavy Industries LLC"]
repository = "https://github.com/pegasusheavy/ergonomic-windows"
homepage = "https://pegasusheavy.github.io/ergonomic-windows/"
documentation = "https://docs.rs/ergonomic-windows"
readme = "README.md"
keywords = ["windows", "win32", "ffi", "utf16", "registry"]
categories = ["os::windows-apis", "api-bindings", "development-tools::ffi"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
] }
thiserror = "1.0"
dhat = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tracking-allocator = "0.4"

[features]
default = []
dhat-heap = ["dhat"]

[lib]
name = "ergonomic_windows"
path = "src/lib.rs"

[[bin]]
name = "ergonomic-windows"
path = "src/main.rs"

[[bin]]
name = "memory-profile"
path = "src/bin/memory_profile.rs"
required-features = ["dhat-heap"]

[[bin]]
name = "cpu-profile"
path = "src/bin/cpu_profile.rs"

[[bench]]
name = "string_bench"
harness = false

[[bench]]
name = "allocations"
harness = false

# Enable debug symbols in release for profiling (flamegraph, perf, etc.)
[profile.release]
debug = true

# Profiling profile - optimized but with full debug info
[profile.profiling]
inherits = "release"
debug = true
strip = false
