[package]
name = "ergonomic-windows"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Ergonomic, safe Rust wrappers for Windows APIs - handles, processes, registry, file system, UI controls, Direct2D graphics, and more"
license = "MIT OR Apache-2.0"
authors = ["Pegasus Heavy Industries LLC"]
repository = "https://github.com/pegasusheavy/ergonomic-windows"
homepage = "https://pegasusheavy.github.io/ergonomic-windows/"
documentation = "https://docs.rs/ergonomic-windows"
readme = "README.md"
keywords = ["windows", "win32", "ffi", "direct2d", "ui"]
categories = ["os::windows-apis", "api-bindings", "gui", "graphics"]

[dependencies]
windows = { version = "0.58", features = [
    # Foundation
    "Win32_Foundation",

    # Threading & Synchronization
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",

    # Security
    "Win32_Security",
    "Win32_Security_Authorization",

    # Storage & File System
    "Win32_Storage_FileSystem",

    # System
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_System_Environment",
    "Win32_System_Pipes",
    "Win32_System_Console",
    "Win32_System_Time",
    "Win32_System_Performance",
    "Win32_System_Power",
    "Win32_System_SystemServices",
    "Win32_System_Com",

    # UI
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Controls",

    # Graphics - GDI
    "Win32_Graphics_Gdi",

    # Graphics - Direct2D & DirectWrite
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D",
    "Foundation_Numerics",

    # Globalization
    "Win32_Globalization",

    # Networking (basic)
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
] }
thiserror = "2.0"
dhat = { version = "0.3", optional = true }
webview2-com = { version = "0.33", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tracking-allocator = "0.4"

[features]
default = []
dhat-heap = ["dhat"]
webview2 = ["webview2-com"]

[lib]
name = "ergonomic_windows"
path = "src/lib.rs"

[[bin]]
name = "ergonomic-windows"
path = "src/main.rs"

[[bin]]
name = "memory-profile"
path = "src/bin/memory_profile.rs"
required-features = ["dhat-heap"]

[[bin]]
name = "cpu-profile"
path = "src/bin/cpu_profile.rs"

[[bench]]
name = "string_bench"
harness = false

[[bench]]
name = "allocations"
harness = false

# Enable debug symbols in release for profiling (flamegraph, perf, etc.)
[profile.release]
debug = true

# Profiling profile - optimized but with full debug info
[profile.profiling]
inherits = "release"
debug = true
strip = false
